--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-pdo": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
+        "laravel/passport": "^11.3",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "nwidart/laravel-modules": "^9.0"
@@ -26,9 +27,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Modules\\": "Modules/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Modules\\": "Modules/"
         }
     },
     "autoload-dev": {
