add swagger and config

--- a/.env.example
+++ b/.env.example
@@ -68,4 +68,5 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 PASSPORT_PERSONAL_ACCESS_CLIENT_ID=
 PASSPORT_PERSONAL_ACCESS_CLIENT_SECRET=
 
-SWAGGER_PORT=8002
+SWAGGER_PORT=8080
+SWAGGER_FORWARD_PORT=8002
