--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/passport": "^11.3",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "nwidart/laravel-modules": "^9.0"
+        "nwidart/laravel-modules": "^9.0",
+        "zircote/swagger-php": "^4.5"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
