--- a/.env.example
+++ b/.env.example
@@ -11,17 +11,19 @@ LOG_LEVEL=debug
 
 PGSQL_DB_CONNECTION=pgsql
 PGSQL_DB_HOST=pgsql
-PGSQL_DB_PORT=5433
+PGSQL_DB_PORT=5432
+PGSQL_DB_FORWARD_PORT=5433
 PGSQL_DB_DATABASE=market
-PGSQL_DB_USERNAME=root
-PGSQL_DB_PASSWORD=root
+PGSQL_DB_USERNAME=market
+PGSQL_DB_PASSWORD=market
 
 MYSQL_DB_CONNECTION=mysql
 MYSQL_DB_HOST=mysql
-MYSQL_DB_PORT=3307
+MYSQL_DB_PORT=3306
+MYSQL_DB_FORWARD_PORT=3307
 MYSQL_DB_DATABASE=market
-MYSQL_DB_USERNAME=root
-MYSQL_DB_PASSWORD=root
+MYSQL_DB_USERNAME=market
+MYSQL_DB_PASSWORD=market
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -34,7 +36,8 @@ MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
-REDIS_PORT=6389
+REDIS_PORT=6379
+REDIS_FORWARD_PORT=6389
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
