--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
         image: 'postgres:14'
 #        restart: always
         ports:
-            - '${PGSQL_DB_PORT:-5432}:5432'
+            - '${PGSQL_DB_FORWARD_PORT:-5432}:5432'
         environment:
             POSTGRES_DB: '${PGSQL_DB_DATABASE}'
             POSTGRES_USER: '${PGSQL_DB_USERNAME}'
@@ -47,7 +47,7 @@ services:
         image: 'mysql/mysql-server:8.0'
 #        restart: always
         ports:
-            - '${MYSQL_DB_PORT:-3306}:3306'
+            - '${MYSQL_DB_FORWARD_PORT:-3306}:3306'
         environment:
             MYSQL_ROOT_PASSWORD: '${MYSQL_DB_PASSWORD}'
             MYSQL_ROOT_HOST: "%"
@@ -67,7 +67,7 @@ services:
         image: 'redis:alpine'
 #        restart: always
         ports:
-            - '${REDIS_PORT:-6379}:6379'
+            - '${REDIS_FORWARD_PORT:-6379}:6379'
         volumes:
             - 'sail-redis:/data'
         networks:
