--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
             POSTGRES_USER: '${PGSQL_DB_USERNAME}'
             POSTGRES_PASSWORD: '${PGSQL_DB_PASSWORD}'
         volumes:
-            - 'sail-pgsql:/var/lib/postgresql/data'
+            - './sail-pgsql:/var/lib/postgresql/data'
         networks:
             - sail
         healthcheck:
@@ -56,7 +56,7 @@ services:
             MYSQL_PASSWORD: '${MYSQL_DB_PASSWORD}'
             MYSQL_ALLOW_EMPTY_PASSWORD: 1
         volumes:
-            - 'sail-mysql:/var/lib/mysql'
+            - './sail-mysql:/var/lib/mysql'
         networks:
             - sail
         healthcheck:
@@ -69,7 +69,7 @@ services:
         ports:
             - '${REDIS_FORWARD_PORT:-6379}:6379'
         volumes:
-            - 'sail-redis:/data'
+            - './sail-redis:/data'
         networks:
             - sail
         healthcheck:
