add some Auth module service

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEY=base64:uFDxiAiU/1+ueIO5h1laS9rEqsNTwIZCt8tl1poXRdA=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_PORT=8001
+TIME_ZONE=Asia/Tehran
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
