--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
             LARAVEL_SAIL: 1
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
+            TZ: '${TIME_ZONE}'
         volumes:
             - '.:/var/www/html'
         networks:
@@ -35,6 +36,7 @@ services:
             POSTGRES_DB: '${PGSQL_DB_DATABASE}'
             POSTGRES_USER: '${PGSQL_DB_USERNAME}'
             POSTGRES_PASSWORD: '${PGSQL_DB_PASSWORD}'
+            TZ: '${TIME_ZONE}'
         volumes:
             - './sail-pgsql:/var/lib/postgresql/data'
         networks:
@@ -55,6 +57,7 @@ services:
             MYSQL_USER: '${MYSQL_DB_USERNAME}'
             MYSQL_PASSWORD: '${MYSQL_DB_PASSWORD}'
             MYSQL_ALLOW_EMPTY_PASSWORD: 1
+            TZ: '${TIME_ZONE}'
         volumes:
             - './sail-mysql:/var/lib/mysql'
         networks:
