--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Market
 APP_ENV=local
-APP_KEY=base64:uFDxiAiU/1+ueIO5h1laS9rEqsNTwIZCt8tl1poXRdA=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_PORT=8001
